fixed header spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
-@charset "utf-8";
+/* @charset "utf-8"; */
 /* CSS Document */
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
 body,
 td,
@@ -76,6 +86,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align: center;
+  padding: 1.5em;
 }
 nav h1 {
   margin: auto;
